--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap-icons": "^1.5.0",
     "cheerio": "^1.0.0-rc.6",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
